styles/_sphinx_base.scss
/* ... */
article.pytorch-article {
  blockquote {
    margin-left: rem(60px);
    color: $quick_start_grey;
  }
}

article.pytorch-article .caption {
  color: $quick_start_grey;
  letter-spacing: 0.25px;
  line-height: rem(34px);
}

article.pytorch-article {
  .math {
    color: $not_quite_black;
    width: auto;
    text-align: center;
    img {
      width: auto;
    }
  }
}

.pytorch-breadcrumbs-wrapper {
  width: 100%;

  @include sphinx-medium-size {
    float: left;
    margin-left: 3%;
    width: $sphinx_article_width;
  }

  @include sphinx-full-size {
    width: 850px;
    margin-left: rem(30px);
  }

  .pytorch-breadcrumbs-aside {
    float: right;

    .fa.fa-github {
      margin-top: 5px;
      display: block;
    }
  }
}

.pytorch-article .container {
  padding-left: 0;
  padding-right: 0;
  max-width: none;
}

::-webkit-input-placeholder {
  color: $color_primary;
}

::-moz-placeholder {
  color: $color_primary;
}

:-ms-input-placeholder {
  color: $color_primary;
}

:-moz-placeholder {
  color: $color_primary;
}

.site-footer {
  @include desktop {
    a:hover {
      color: $color_primary;
    }
  }
}

.docs-tutorials-resources {
  a {
    color: $color_primary;
  }
}

.header-holder {
  position: relative;
  z-index: 201;
}

.header-holder .main-menu {
  ul li {
    &.active {
      &:after {
        color: $color_primary;
      }

      a {
        color: $color_primary;
      }
    }
  }

  ul li a {
    @include full-nav-menu-desktop {
      &:hover {
        color: $color_primary;
      }
    }
  }
}

.mobile-main-menu.open {
  ul li.active a {
    color: $color_primary;
  }
}

.version {
  padding-bottom: rem(16px);
}

.pytorch-call-to-action-links {
  padding-top: 0;
  display: flex;

  @include desktop {
    padding-top: rem(40px);
  }

  @include small-desktop {
    padding-top: 0;
  }

  @media (min-width: 1100px) and (max-width: 1239px) {
    padding-top: rem(40px);
   }

  #tutorial-type {
    display: none;
  }

  .call-to-action-img, .call-to-action-notebook-img {
    height: rem(22px);
    width: rem(22px);
    margin-right: 10px;
  }

  .call-to-action-notebook-img {
    height: rem(16px);
  }

  a {
    padding-right: rem(20px);
    color: $black;
    cursor: pointer;
    &:hover {
      color: $color_primary;
    }

    .call-to-action-desktop-view {
      display: none;
      @include desktop {
        display: block;
      }
    }

    .call-to-action-mobile-view {
      display: block;
      @include desktop {
        display: none;
      }
    }

    #google-colab-link, #download-notebook-link,
    #github-view-link {
      padding-bottom: rem(10px);
      border-bottom: 1px solid $light_grey;
      padding-right: rem(40px);
      display: flex;
      align-items: center;
      &:hover {
        border-bottom-color: $color_primary;
        color: $color_primary;
      }
    }
  }
}

.slack-container {
  display: flex;
  
  .slack-button {
    border: 1px solid transparent; 
    background: linear-gradient(206.91deg, #792EE5 16.83%, #3EABB3 144.59%);
    border-radius: 6px; 
    height: 30px; 
    width: 210px; 
    justify-content:center;
    font-size: 14px;
  }

  a {
    display: flex; 
    height: 100%; 
    text-decoration: none;
  }

  .icon {
    height: 100%; 
    color: white; 
    margin-left: 10px;
    padding-top: 2px;
  }
  
  .button-title {
    margin: auto 5px;
    color: white;
  }
}

.slack-align-left {
  justify-content: flex-start;
}

.slack-align-center {
  justify-content: center;
}

.slack-align-right {
  justify-content: flex-end;
}
/* ... */

